projects/compiler/test/typechecker/binary/neq_error.1.out
Error at %FILE_NAME%:1:8
Type mismatch
  |  123 != "abcd"
            ^
Expected: Int
but instead found: String
